@@ -3,6 +3,10 @@
 
 ## Releases from [chrisant996/clink](https://github.com/chrisant996/clink) fork
 
+### Unreleased
+
+- Fixed potentially-missing trailing path separator when `menu-complete` completes a directory match.
+
 ### v1.1.8
 
 - Fixed file match completions when an argmatcher only generates flag matches.
